--- a/02_browse.jade
+++ b/02_browse.jade
@@ -26,51 +26,65 @@ html
             div.btn-exit
               img(src="svg/icon-x-2.svg")
         
-    
+    section.overlay
     section.menu-mobile
-      div.back-button
-        svg.back-arrow(version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 75 50" style="enable-background:new 0 0 75 50;" xml:space="preserve")
-          path(d="M3,23h69c1.1,0,2,0.9,2,2v0c0,1.1-0.9,2-2,2H3c-1.1,0-2-0.9-2-2v0C1,23.9,1.9,23,3,23z")
-          path(d="M4,23.2l10.5,6.1c1,0.5,1.3,1.8,0.7,2.7l0,0c-0.5,1-1.8,1.3-2.7,0.7L2,26.7c-1-0.6-1.3-1.8-0.7-2.7l0,0C1.8,23,3.1,22.7,4,23.2z")
-          path(d="M2,23.3l10.5-6.1c1-0.6,2.2-0.2,2.7,0.7l0,0c0.5,1,0.2,2.2-0.7,2.7L4,26.8c-1,0.6-2.2,0.2-2.7-0.7l0,0C0.7,25.1,1.1,23.9,2,23.3z")
-      
       div.menu-mobile-content
-        div.cat-wrapper
-          img.icon-cat-mobile(src="svg/icon-cat-retail-light.svg")
-          div.cat-text-field.inline
-            div.cat-name Retail
-            div.cat-count (26)
+      
+        div.back-button
+          svg.back-arrow(version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 75 50" style="enable-background:new 0 0 75 50;" xml:space="preserve")
+            path(d="M3,23h69c1.1,0,2,0.9,2,2v0c0,1.1-0.9,2-2,2H3c-1.1,0-2-0.9-2-2v0C1,23.9,1.9,23,3,23z")
+            path(d="M4,23.2l10.5,6.1c1,0.5,1.3,1.8,0.7,2.7l0,0c-0.5,1-1.8,1.3-2.7,0.7L2,26.7c-1-0.6-1.3-1.8-0.7-2.7l0,0C1.8,23,3.1,22.7,4,23.2z")
+            path(d="M2,23.3l10.5-6.1c1-0.6,2.2-0.2,2.7,0.7l0,0c0.5,1,0.2,2.2-0.7,2.7L4,26.8c-1,0.6-2.2,0.2-2.7-0.7l0,0C0.7,25.1,1.1,23.9,2,23.3z")
+        nav.mobile-nav-set1
+          a(href="#").nav-favorite  my favorite offers
         
-        div.cat-wrapper
-          img.icon-cat-mobile(src="svg/icon-cat-fitness-light.svg")
-          div.cat-text-field.inline
-            div.cat-name Fitness
-            div.cat-count (26)
+          div.divider-teal
+        div.mobile-cat-container
+          div.cat-wrapper
+            img.icon-cat-mobile(src="svg/icon-cat-retail-light.svg")
+            div.cat-text-field.inline
+              div.cat-name Retail
+              div.cat-count (26)
+          
+          div.cat-wrapper
+            img.icon-cat-mobile(src="svg/icon-cat-fitness-light.svg")
+            div.cat-text-field.inline
+              div.cat-name Fitness
+              div.cat-count (26)
+          
+          div.cat-wrapper
+            img.icon-cat-mobile(src="svg/icon-cat-er-light.svg")
+            div.cat-text-field.inline
+              div.cat-name Emergency Service
+              div.cat-count (26)
+              
+          div.cat-wrapper
+            img.icon-cat-mobile(src="svg/icon-cat-entertainment-light.svg")
+            div.cat-text-field.inline
+              div.cat-name Entertainment
+              div.cat-count (26)
+          
+          div.cat-wrapper
+            img.icon-cat-mobile(src="svg/icon-cat-homeimprovement-light.svg")
+            div.cat-text-field.inline
+              div.cat-name Home Improvement
+              div.cat-count (26)
+          
+          div.cat-wrapper
+            img.icon-cat-mobile(src="svg/icon-cat-nhoguide-light.svg")
+            div.cat-text-field.inline
+              div.cat-name NHO Guide
+              div.cat-count (26)  
+        nav.mobile-nav-set2
+          div.divider-teal
+          a(href="#") Browse Offers
+          a(href="#")  log in
+          a(href="#").nav-profile  jay engstrom
+            span (many days left)  
+          a(href="#")  how it works
+          a(href="#")  get an invitation code
+          
         
-        div.cat-wrapper
-          img.icon-cat-mobile(src="svg/icon-cat-er-light.svg")
-          div.cat-text-field.inline
-            div.cat-name Emergency Service
-            div.cat-count (26)
-            
-        div.cat-wrapper
-          img.icon-cat-mobile(src="svg/icon-cat-entertainment-light.svg")
-          div.cat-text-field.inline
-            div.cat-name Entertainment
-            div.cat-count (26)
-        
-        div.cat-wrapper
-          img.icon-cat-mobile(src="svg/icon-cat-homeimprovement-light.svg")
-          div.cat-text-field.inline
-            div.cat-name Home Improvement
-            div.cat-count (26)
-        
-        div.cat-wrapper
-          img.icon-cat-mobile(src="svg/icon-cat-nhoguide-light.svg")
-          div.cat-text-field.inline
-            div.cat-name NHO Guide
-            div.cat-count (26)
-
     header
       div.container
         div.row
@@ -97,7 +111,7 @@ html
           div.col
             h2.top-buffer Your Local Offers
             //- we do not this the following button in the actual website, just to demo the snack bar/notice box 
-            button.show-notice click me to toggle the snackbar
+            //- button.show-notice click me to toggle the snackbar
         div.row
         
           div.main-side-cat.col-xl-3.top-buffer
