--- a/css/main.nested.css
+++ b/css/main.nested.css
@@ -497,6 +497,22 @@ div.footer-copywrite {
   font: 400 14px "Brandon Grotesque";
   color: #4f5b69; }
 
+section.overlay {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 999;
+  background: rgba(26, 42, 53, 0.75);
+  display: none;
+  transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1); }
+
+section.overlay-show {
+  display: block; }
+
 section.menu-mobile {
   width: 80%;
   height: 100vh;
@@ -515,16 +531,16 @@ section.menu-mobile-show {
 
 div.menu-mobile-content {
   width: 100%;
-  padding: 10%; }
+  padding: 0 5%; }
 
 div.back-button {
   width: 100%;
-  height: 40px;
-  padding: 10px 0 0 10px; }
+  height: 60px; }
   div.back-button svg.back-arrow {
-    width: 80px;
+    width: 60px;
     height: 40px;
-    fill: #19e8ef; }
+    fill: #19e8ef;
+    margin: 10px 0; }
 
 div.menu-mobile-cat {
   padding-bottom: 30px;
@@ -532,12 +548,19 @@ div.menu-mobile-cat {
 
 div.cat-wrapper {
   width: 100%;
-  height: 60px;
-  padding: 5px 15px; }
+  height: 50px;
+  padding: 5px 10px; }
 
 div.cat-wrapper.highlight {
   background: #ffffff;
   border-radius: 30px; }
+
+div.divider-teal {
+  width: 100%;
+  margin: 4vh 0;
+  padding: 0 5%;
+  height: 1px;
+  background: #0bb2b2; }
 
 section.menu-mobile div.cat-text-field {
   padding-left: 20px;
@@ -545,12 +568,56 @@ section.menu-mobile div.cat-text-field {
   height: 40px; }
   section.menu-mobile div.cat-text-field div.cat-name {
     height: 20px;
-    font: 400 18px "Brandon Grotesque";
+    font: 700 18px "Brandon Grotesque";
     line-height: 20px; }
   section.menu-mobile div.cat-text-field div.cat-count {
     height: 20px;
     font: 400 14px "Brandon Grotesque";
     line-height: 20px; }
+
+section.menu-mobile nav {
+  width: 100%;
+  float: none;
+  display: block;
+  line-height: 24px; }
+  section.menu-mobile nav a {
+    padding: 0;
+    margin: 0;
+    color: #ffffff; }
+
+section.menu-mobile nav.mobile-nav-set1 {
+  line-height: 36px; }
+  section.menu-mobile nav.mobile-nav-set1 a {
+    display: block;
+    padding: 5px 10px;
+    font: 700 18px "Brandon Grotesque";
+    position: relative; }
+    section.menu-mobile nav.mobile-nav-set1 a:after {
+      display: none; }
+  section.menu-mobile nav.mobile-nav-set1 a.nav-favorite {
+    padding-left: calc( 10px + 40px + 20px + 5px);
+    line-height: 40px; }
+  section.menu-mobile nav.mobile-nav-set1 a.nav-favorite:after {
+    display: none; }
+  section.menu-mobile nav.mobile-nav-set1 a.nav-favorite:before {
+    display: block;
+    content: '';
+    width: 40px;
+    height: 40px;
+    background-image: url("../svg/icon-favorite.svg");
+    background-repeat: no-repeat;
+    position: absolute;
+    top: 50%;
+    left: 20px;
+    transform: translate(0%, -50%); }
+
+section.menu-mobile nav.mobile-nav-set2 a {
+  display: block;
+  font: 400 15px "Brandon Grotesque";
+  color: #c8c8c8; }
+  section.menu-mobile nav.mobile-nav-set2 a span {
+    font: 700 15px "Brandon Grotesque";
+    color: #ffffff; }
 
 img.cat-icon {
   width: 50px;
