--- a/css/main.sass
+++ b/css/main.sass
@@ -563,10 +563,6 @@ div.offer-box, div.favorite-box, div.redeem-box
 		box-shadow: 0px 0px 15px 3px rgba(0,0,0,0.1)
 
 
-
-
-
-
 div.footer-link
 	a
 		font: 400 16px $BG
@@ -588,6 +584,21 @@ div.footer-copywrite
 	font: 400 14px $BG
 	color: $slateGrey
 
+section.overlay
+  width: 100%
+  height: 100vh
+  position: fixed
+  top: 0
+  left: 0
+  right: 0
+  bottom: 0
+  z-index: 999
+  background: rgba(26, 42 , 53, .75)
+  display: none
+  transition: all 300ms $standardCurve
+section.overlay-show
+  display: block
+
 section.menu-mobile
 	width: 80%
 	height: 100vh
@@ -606,16 +617,16 @@ section.menu-mobile-show
 
 div.menu-mobile-content
 	width: 100%
-	padding: 10%
+	padding: 0 5%
 
 div.back-button
 	width: 100%
-	height: 40px
-	padding: 10px 0 0 10px
+	height: 60px
 	svg.back-arrow
-		width: 80px
+		width: 60px
 		height: 40px
 		fill: $brightTeal
+  margin: 10px 0
 
 div.menu-mobile-cat
   padding-bottom: 30px
@@ -623,17 +634,24 @@ div.menu-mobile-cat
 
 div.cat-wrapper
   width: 100%
-  height: 60px
+  height: 50px
   // angular incapable
   // padding: 5px
   // angular incapable
-  padding: 5px 15px
+  padding: 5px 10px
 
 // angular capable
 div.cat-wrapper.highlight
   background: #ffffff
   border-radius: 30px
 
+
+div.divider-teal
+  width: 100%
+  margin: 4vh 0
+  padding: 0 5%
+  height: 1px
+  background: $lightTeal
 
 section.menu-mobile
   div.cat-text-field
@@ -642,12 +660,64 @@ section.menu-mobile
     height: 40px
     div.cat-name
       height: 20px
-      font: 400 18px $BG
+      font: 700 18px $BG
       line-height: 20px
     div.cat-count
       height: 20px
       font: 400 14px $BG
       line-height: 20px
+  nav
+    width: 100%
+    float: none
+    display: block
+    line-height: 24px
+    a
+      padding: 0
+      margin: 0
+      color: #ffffff
+
+  nav.mobile-nav-set1
+    line-height: 36px
+    a
+      display: block
+      padding: 5px 10px
+      font: 700 18px $BG
+      position: relative
+      &:after
+        display: none
+    a.nav-favorite
+      padding-left: calc( 10px + 40px + 20px + 5px )
+      line-height: 40px
+    a.nav-favorite:after
+      display: none
+    a.nav-favorite:before
+        display: block
+        content: ''
+        width: 40px
+        height: 40px
+        background-image: url('../svg/icon-favorite.svg')
+        background-repeat: no-repeat
+        position: absolute
+        top: 50%
+        left: 20px
+        transform: translate(0%, -50%)
+
+
+
+  nav.mobile-nav-set2
+    a
+      display: block
+      font: 400 15px $BG
+      color: #c8c8c8
+      span
+        font: 700 15px $BG
+        color: #ffffff
+
+
+
+
+
+
 
 img.cat-icon
   width: 50px
