error msg on NHOO form + mobile menu change

--- a/01_index.jade
+++ b/01_index.jade
@@ -93,9 +93,12 @@ html
             div.form-container.col-lg-6.col-md-10
               form.form-regular
                 h3 enter invitation code to see all Offers
-                
                 input(type="text" value="")
                 input(type="submit" value="get Offers")
+                div(style="clear: both")
+
+                div.error-msg Please Enter a Valid Code
+                
                 a#link-get-invite(href="#").teal 
                   |get invitation code
                 
