--- a/02_browse.jade
+++ b/02_browse.jade
@@ -26,20 +26,34 @@ html
             div.btn-exit
               img(src="svg/icon-x-2.svg")
         
-    section.overlay
+    //- section.overlay
     section.menu-mobile
       div.menu-mobile-content
       
-        div.back-button
-          svg.back-arrow(version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 75 50" style="enable-background:new 0 0 75 50;" xml:space="preserve")
-            path(d="M3,23h69c1.1,0,2,0.9,2,2v0c0,1.1-0.9,2-2,2H3c-1.1,0-2-0.9-2-2v0C1,23.9,1.9,23,3,23z")
-            path(d="M4,23.2l10.5,6.1c1,0.5,1.3,1.8,0.7,2.7l0,0c-0.5,1-1.8,1.3-2.7,0.7L2,26.7c-1-0.6-1.3-1.8-0.7-2.7l0,0C1.8,23,3.1,22.7,4,23.2z")
-            path(d="M2,23.3l10.5-6.1c1-0.6,2.2-0.2,2.7,0.7l0,0c0.5,1,0.2,2.2-0.7,2.7L4,26.8c-1,0.6-2.2,0.2-2.7-0.7l0,0C0.7,25.1,1.1,23.9,2,23.3z")
+        //- div.back-button
+        //-   svg.back-arrow(version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 75 50" style="enable-background:new 0 0 75 50;" xml:space="preserve")
+        //-     path(d="M3,23h69c1.1,0,2,0.9,2,2v0c0,1.1-0.9,2-2,2H3c-1.1,0-2-0.9-2-2v0C1,23.9,1.9,23,3,23z")
+        //-     path(d="M4,23.2l10.5,6.1c1,0.5,1.3,1.8,0.7,2.7l0,0c-0.5,1-1.8,1.3-2.7,0.7L2,26.7c-1-0.6-1.3-1.8-0.7-2.7l0,0C1.8,23,3.1,22.7,4,23.2z")
+        //-     path(d="M2,23.3l10.5-6.1c1-0.6,2.2-0.2,2.7,0.7l0,0c0.5,1,0.2,2.2-0.7,2.7L4,26.8c-1,0.6-2.2,0.2-2.7-0.7l0,0C0.7,25.1,1.1,23.9,2,23.3z")
+        //- 
         nav.mobile-nav-set1
           a(href="#").nav-favorite  my favorite offers
-        
+            span (12)
+          a(href="#") Browse Offers
+          a(href="#")  log in
+          a(href="#").nav-profile  jay engstrom
+            span (3 days left)  
+          a(href="#")  how it works
+          a(href="#")  get an invitation code
           div.divider-teal
+          
         div.mobile-cat-container
+          div.cat-wrapper
+            img.icon-cat-mobile(src="svg/icon-cat-restaurant-light.svg")
+            div.cat-text-field.inline
+              div.cat-name Retail
+              div.cat-count (26)
+          
           div.cat-wrapper
             img.icon-cat-mobile(src="svg/icon-cat-retail-light.svg")
             div.cat-text-field.inline
@@ -75,22 +89,22 @@ html
             div.cat-text-field.inline
               div.cat-name NHO Guide
               div.cat-count (26)  
-        nav.mobile-nav-set2
-          div.divider-teal
-          a(href="#") Browse Offers
-          a(href="#")  log in
-          a(href="#").nav-profile  jay engstrom
-            span (many days left)  
-          a(href="#")  how it works
-          a(href="#")  get an invitation code
-          
         
+
+          
+          
     header
       div.container
         div.row
           div.col
-            img.hamburger(src="svg/icon-hamburger.svg")
-            img.logo(src="svg/logo.svg")          
+            //HTML
+            button#burger
+              span.bun#bun__top
+              span.bun#patty
+              span.bun#bun__bottom
+            
+            img.logo(src="svg/logo.svg")
+                      
             nav
               //- a  how it works
               //- a  get an invitation code
@@ -102,9 +116,6 @@ html
     // fill up 80px header's height        
     section.header-shift  
        
-
-      
-    
     section.browse-wrapper
       div.container
         div.row
@@ -121,55 +132,54 @@ html
               //- div.highlight
               //- angular incapable
               
-              
               div.side-cat-wrapper-inner
               
                 div.cat-wrapper.highlight
                   a(href="#offerBox-restaurant")
                     img.icon-cat(src="svg/icon-cat-restaurant.svg")
-                    div.cat-text-field.inline
+                    div.cat-text-field
                       div.cat-name Restaurant
                       div.cat-count (26)
                 
                 div.cat-wrapper
                   a(href="#offerBox-retail")
                     img.icon-cat(src="svg/icon-cat-retail.svg")
-                    div.cat-text-field.inline
+                    div.cat-text-field
                       div.cat-name Retail
                       div.cat-count (26)
                 
                 div.cat-wrapper.highlight
                   a(href="#offerBox-fitness")
                     img.icon-cat(src="svg/icon-cat-fitness.svg")
-                    div.cat-text-field.inline
+                    div.cat-text-field
                       div.cat-name Fitness
                       div.cat-count (26)
                 
                 div.cat-wrapper
                   a(href="#offerBox-er")
                     img.icon-cat(src="svg/icon-cat-er.svg")
-                    div.cat-text-field.inline
+                    div.cat-text-field
                       div.cat-name Emergency Service
                       div.cat-count (26)
                     
                 div.cat-wrapper.highlight
                   a(href="#offerBox-entertainment")
                     img.icon-cat(src="svg/icon-cat-entertainment.svg")
-                    div.cat-text-field.inline
+                    div.cat-text-field
                       div.cat-name Entertainment
                       div.cat-count (26)
                 
                 div.cat-wrapper
                   a(href="#offerBox-homeimprovement")
                     img.icon-cat(src="svg/icon-cat-homeimprovement.svg")
-                    div.cat-text-field.inline
+                    div.cat-text-field
                       div.cat-name Home Improvement
                       div.cat-count (26)
                 
                 div.cat-wrapper.highlight
                   a(href="#offerBox-nhoguide")
                     img.icon-cat(src="svg/icon-cat-nhoguide.svg")
-                    div.cat-text-field.inline
+                    div.cat-text-field
                       div.cat-name NHO Guide
                       div.cat-count (26)
           
