--- a/css/main.nested.css
+++ b/css/main.nested.css
@@ -135,10 +135,6 @@ a.teal {
   header .container {
     padding: 0; } }
 
-@media (max-width: 767px) and (min-width: 0px) {
-  header .container {
-    margin: 0; } }
-
 header {
   width: 100%;
   height: 80px;
@@ -162,7 +158,7 @@ header {
     @media (max-width: 767px) and (min-width: 0px) {
       header img.hamburger {
         width: auto;
-        height: 60px;
+        height: 50px;
         display: inline-block; } }
   header img.logo {
     width: 240px;
@@ -513,54 +509,45 @@ section.overlay {
 section.overlay-show {
   display: block; }
 
-section.menu-mobile {
-  width: 80%;
-  height: 100vh;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 1000;
-  background: #1a2a35;
-  transform: translateX(-100%);
-  transition: all 400ms cubic-bezier(0, 0, 0.2, 1); }
-
-section.menu-mobile-show {
-  transform: translate(0); }
-
-div.menu-mobile-content {
-  width: 100%;
-  padding: 0 5%; }
-
-div.back-button {
-  width: 100%;
-  height: 60px; }
-  div.back-button svg.back-arrow {
-    width: 60px;
-    height: 40px;
-    fill: #19e8ef;
-    margin: 10px 0; }
-
-div.menu-mobile-cat {
-  padding-bottom: 30px;
-  border-bottom: 1px solid #19e8ef; }
-
 div.cat-wrapper {
-  width: 100%;
-  height: 50px;
-  padding: 5px 10px; }
+  padding: 5px 20px; }
 
 div.cat-wrapper.highlight {
   background: #ffffff;
   border-radius: 30px; }
 
-div.divider-teal {
+div.cat-wrapper {
   width: 100%;
-  margin: 4vh 0;
-  padding: 0 5%;
-  height: 1px;
-  background: #0bb2b2; }
+  height: 60px; }
+  div.cat-wrapper a {
+    display: table;
+    border-collapse: collapse;
+    height: 50px; }
+    div.cat-wrapper a img {
+      width: 50px;
+      height: 50px;
+      display: table-cell;
+      vertical-align: middle; }
+    div.cat-wrapper a div.cat-text-field {
+      display: table-cell;
+      vertical-align: middle; }
+      div.cat-wrapper a div.cat-text-field div {
+        height: 20px; }
+
+section.menu-mobile {
+  width: 100%;
+  height: auto;
+  min-height: calc( 50px + 100vh);
+  position: fixed;
+  top: 60px;
+  left: 0;
+  z-index: 1000;
+  background: #1a2a35;
+  transform: translateX(-100%);
+  transition: all 400ms cubic-bezier(0, 0, 0.2, 1); }
+
+section.menu-mobile div.cat-wrapper:first-child {
+  margin-top: 10px; }
 
 section.menu-mobile div.cat-text-field {
   padding-left: 20px;
@@ -585,39 +572,39 @@ section.menu-mobile nav {
     margin: 0;
     color: #ffffff; }
 
+section.menu-mobile div.cat-wrapper {
+  height: 40px;
+  padding: 0;
+  margin-bottom: 10px; }
+
+div.menu-mobile-content {
+  width: 100%;
+  padding: 0 5%; }
+
+section.menu-mobile-show {
+  transform: translate(0); }
+
+div.divider-teal {
+  width: 100%;
+  margin: 15px 0;
+  height: 1px;
+  background: #0bb2b2; }
+
 section.menu-mobile nav.mobile-nav-set1 {
-  line-height: 36px; }
+  padding-top: 15px; }
   section.menu-mobile nav.mobile-nav-set1 a {
     display: block;
-    padding: 5px 10px;
-    font: 700 18px "Brandon Grotesque";
+    padding-bottom: 10px;
+    font: 300 18px "Brandon Grotesque";
     position: relative; }
     section.menu-mobile nav.mobile-nav-set1 a:after {
       display: none; }
-  section.menu-mobile nav.mobile-nav-set1 a.nav-favorite {
-    padding-left: calc( 10px + 40px + 20px + 5px);
-    line-height: 40px; }
+    section.menu-mobile nav.mobile-nav-set1 a span {
+      font: 700 15px "Brandon Grotesque";
+      padding-left: 5px;
+      color: #ffffff; }
   section.menu-mobile nav.mobile-nav-set1 a.nav-favorite:after {
     display: none; }
-  section.menu-mobile nav.mobile-nav-set1 a.nav-favorite:before {
-    display: block;
-    content: '';
-    width: 40px;
-    height: 40px;
-    background-image: url("../svg/icon-favorite.svg");
-    background-repeat: no-repeat;
-    position: absolute;
-    top: 50%;
-    left: 20px;
-    transform: translate(0%, -50%); }
-
-section.menu-mobile nav.mobile-nav-set2 a {
-  display: block;
-  font: 400 15px "Brandon Grotesque";
-  color: #c8c8c8; }
-  section.menu-mobile nav.mobile-nav-set2 a span {
-    font: 700 15px "Brandon Grotesque";
-    color: #ffffff; }
 
 img.cat-icon {
   width: 50px;
@@ -688,6 +675,23 @@ section.family {
     @media (max-width: 767px) and (min-width: 0px) {
       section.family div.invite form.form-regular input[type="submit"] {
         width: 50%; } }
+
+div.invite div.error-msg {
+  display: block;
+  color: #ffffff;
+  font: 700 17px "Brandon Grotesque";
+  position: relative;
+  padding: 10px 0 10px 24px; }
+
+div.invite div.error-msg:before {
+  content: '';
+  display: block;
+  width: 20px;
+  height: 20px;
+  background-image: url("../svg/icon-exclamationmark.svg");
+  position: absolute;
+  top: 10px;
+  left: 0; }
 
 section.featured-homepage {
   width: 100%;
@@ -1456,11 +1460,6 @@ div.explore-offer {
   padding-right: 0 !important;
   padding-left: 0 !important; }
 
-img.icon-cat {
-  width: 50px;
-  height: 50px;
-  vertical-align: top; }
-
 img.icon-cat-mobile {
   width: 40px;
   height: 40px;
@@ -1473,8 +1472,7 @@ img.icon-cat-mobile {
 
 div.cat-name {
   height: 25px;
-  font: 400 18px "Brandon Grotesque";
-  vertical-align: text-bottom; }
+  font: 400 18px "Brandon Grotesque"; }
 
 div.cat-count {
   height: 25px;
@@ -1600,3 +1598,53 @@ div.cat-count {
 
 .toast-message a:hover {
   color: inherit; }
+
+@media (max-width: 767px) and (min-width: 0px) {
+  header div.col {
+    padding: 0;
+    margin: 0; } }
+
+header div.logo {
+  width: auto;
+  height: 80px; }
+
+button#burger {
+  width: 60px;
+  height: 60px;
+  position: relative;
+  margin: 0;
+  z-index: 2000;
+  display: none;
+  float: left; }
+  @media (min-width: 768px) and (max-width: 991px) {
+    button#burger {
+      display: inline-block; } }
+  @media (max-width: 767px) and (min-width: 0px) {
+    button#burger {
+      display: inline-block; } }
+  button#burger span.bun {
+    display: block;
+    width: 30px;
+    height: 4px;
+    background: #4f5b69;
+    border-radius: 2px;
+    position: absolute;
+    left: 12px;
+    transition: all 150ms cubic-bezier(0.4, 0, 0.2, 1); }
+    button#burger span.bun:nth-child(1) {
+      top: 18px; }
+    button#burger span.bun:nth-child(2) {
+      top: 27px; }
+    button#burger span.bun:nth-child(3) {
+      top: 36px; }
+  button#burger span.bun.squeeze__bun {
+    top: 27px; }
+
+span.hide__patty {
+  display: none !important; }
+
+span.rotateClockwise {
+  transform: rotate(45deg); }
+
+span.rotateCounterClockwise {
+  transform: rotate(-45deg); }
