--- a/css/main.sass
+++ b/css/main.sass
@@ -345,7 +345,7 @@ button
 	margin-top: 10px
 	border: none
 	border-radius: 4px
-	font: normal 13px $SQ
+	font: normal 14px $SQ
 	text-transform: uppercase
 	letter-spacing: .5px
 	cursor: pointer
@@ -759,8 +759,9 @@ section.headline
   h1
   p
     width: 60%
+    max-wdith: 640px
     @include xs
-      // width: 90%
+      width: 80%
 
 
 .expand
@@ -867,7 +868,7 @@ section.guide
       background: $teal
       margin-top: 20px
       line-height: 40px
-      font: normal 13px $SQ
+      font: normal 14px $SQ
       color: #ffffff
       border-radius: 4px
 
