back-to-offer IE11 fix

--- a/03_detail.jade
+++ b/03_detail.jade
@@ -172,8 +172,7 @@ html
             
         div.row.top-buffer-xs
           div.col
-            button.btn-anchorOffer 
-              a(href="#") back to Offers
+            a.offer-anchor(href="#") back to Offers
         
 
     
