--- a/css/main.nested.css
+++ b/css/main.nested.css
@@ -319,29 +319,26 @@ button:disabled {
     .btn-redeem {
       display: block; } }
 
-.btn-anchorOffer {
+.offer-anchor {
   height: 40px;
-  padding: 5px 20px;
+  padding: 10px 20px;
   border-radius: 20px;
   font: normal 14px "Sequel";
   background: #ffffff;
   border: 1px solid #00999e;
-  transition: all 200ms cubic-bezier(0.4, 0, 0.2, 1); }
-  .btn-anchorOffer:hover {
+  transition: all 200ms cubic-bezier(0.4, 0, 0.2, 1);
+  color: #00999e; }
+  .offer-anchor:hover {
     border: 1px solid #0bb2b2;
-    background: #163144; }
-    .btn-anchorOffer:hover a {
-      color: #19e8ef; }
-  .btn-anchorOffer a {
-    color: #00999e;
-    transition: all 200ms cubic-bezier(0.4, 0, 0.2, 1); }
-    .btn-anchorOffer a:before {
-      display: inline-block;
-      content: '';
-      width: 28px;
-      height: 14px;
-      background-image: url("../svg/icon-previous.svg");
-      margin-right: 10px; }
+    background: #163144;
+    color: #19e8ef; }
+  .offer-anchor:before {
+    display: inline-block;
+    content: '';
+    width: 28px;
+    height: 14px;
+    background-image: url("../svg/icon-previous.svg");
+    margin-right: 10px; }
 
 section.notice {
   overflow: hidden;
