print layout fixes

--- a/03_detail.jade
+++ b/03_detail.jade
@@ -109,7 +109,7 @@ html
             div.detail-image
               div.row
                 div.col
-                  img(src="image/offer-image-nobu2.png")
+                  img(src="image/offer-image-nobu.png")
             div.top-buffer-xs
               div.row.justify-content-center
                 div.col-12.col-sm-12.col-md-12.col-lg-6.centered.whitebox
@@ -170,9 +170,9 @@ html
                 span.retailer-email jsmith@subway.com  
 
             
-        div.row.top-buffer-xs
+        div.offer-anchor.row.top-buffer-xs
           div.col
-            a.offer-anchor(href="#") back to Offers
+            a.offer-anchor__link(href="#") back to Offers
         
 
     
