--- a/css/main.nested.css
+++ b/css/main.nested.css
@@ -52,6 +52,7 @@ body {
 
 h1 {
   font-family: "Open Sans";
+    font-family-text-transform: capitalize;
   font-weight: 800;
   font-size: calc( 30px + (45 - 30) * ( (100vw - 320px) / ( 2000 - 320) )); }
 
