remove presence of print button in mobile

--- a/03_detail.jade
+++ b/03_detail.jade
@@ -127,7 +127,7 @@ html
 
                   button.btn-action.btn-1#btn-sms text offer to mobile
                   button.btn-action.btn-2#btn-save save to favorite
-                  button.btn-action.btn-3 print offer
+                  button.btn-action.btn-3.btn-print print offer
                   button.btn-action.btn-1.btn-redeem redeem offer
                   
                   
