--- a/css/main.sass
+++ b/css/main.sass
@@ -413,7 +413,11 @@ button
     background-image: url('../svg/icon-previous.svg')
     margin-right: 10px
 
-
+.btn-print
+  @include xs
+    display: none
+  @include sm
+    display: none
 
 
 
