featured offer detail page 'sign in' and 'enter invitation' buttons update

--- a/03_detail.jade
+++ b/03_detail.jade
@@ -118,34 +118,33 @@ html
                     h6 your total bill
                   div.offer-desc
                 div.col-12.col-sm-12.col-md-12.col-lg-6.btn-action-container
-                  //- div.get-offer
-                  //-   div To get this offers: 
-                  //-   a.teal-1 Sign In
-                  //-   span &#124;
-                  //-   a.teal-1 Enter Invitation Codes
+                  div.get-offer
+                    div To get this offers: 
+                    button.btn-action.btn-2.btn--larger-text Sign In
+                    button.btn-action.btn-2.btn--larger-text Enter Invitation Code
                   
 
-                  button.btn-action.btn-1#btn-sms text offer to mobile
-                  button.btn-action.btn-2#btn-save save to favorite
-                  button.btn-action.btn-3.btn-print print offer
-                  button.btn-action.btn-1.btn-redeem redeem offer
-                  
-                  
+                  //- button.btn-action.btn-1#btn-sms text offer to mobile
+                  //- button.btn-action.btn-2#btn-save save to favorite
+                  //- button.btn-action.btn-3.btn-print print offer
+                  //- button.btn-action.btn-1.btn-redeem redeem offer
+                  //- 
+                  //- 
                 
               
-              div.detail-restric.top-buffer-xs
-                div.restric-title Deal Restrictions
-                p Must be used during displayed time frame. Deals cannot be combined with other deals or subsutituted
-                p.expire.top-buffer-xs Expiration Date:
-                  span  01/16/2017
-                  
+              //- div.detail-restric.top-buffer-xs
+              //-   div.restric-title Deal Restrictions
+              //-   p Must be used during displayed time frame. Deals cannot be combined with other deals or subsutituted
+              //-   p.expire.top-buffer-xs Expiration Date:
+              //-     span  01/16/2017
+              //- 
                 //- p.offer-code NHO Code
                 //-   span xyz123s
                   
-                div.redeem-code 
-                  span.code-title NHO Codes:
-                  span.code-digit LXKC213
-                  
+                //- div.redeem-code 
+                //-   span.code-title NHO Codes:
+                //-   span.code-digit LXKC213
+                //- 
           
                 
             
@@ -170,10 +169,10 @@ html
                 span.retailer-email jsmith@subway.com  
 
             
-        div.offer-anchor.row.top-buffer-xs
-          div.col
-            a.offer-anchor__link(href="#") back to Offers
-        
+        //- div.offer-anchor.row.top-buffer-xs
+        //-   div.col
+        //-     a.offer-anchor__link(href="#") back to Offers
+        //- 
 
     
     footer.top-buffer
