--- a/css/main.sass
+++ b/css/main.sass
@@ -391,6 +391,10 @@ button
   @include xs
     display: block
 
+.btn--larger-text
+  font-size: 20px
+
+
 .offer-anchor__link
   height: 40px
   padding: 10px 20px
