additiona favorite offer link on browsing page

--- a/02_browse.jade
+++ b/02_browse.jade
@@ -133,7 +133,7 @@ html
               //- angular incapable
               
               div.side-cat-wrapper-inner
-              
+
                 div.cat-wrapper.highlight
                   a(href="#offerBox-restaurant")
                     img.icon-cat(src="svg/icon-cat-restaurant.svg")
@@ -182,6 +182,14 @@ html
                     div.cat-text-field
                       div.cat-name NHO Guide
                       div.cat-count (26)
+          
+                div.cat-wrapper.cat-wrapper__favorite
+                  a(href="link_to_favorite_page")
+                    img.icon-cat(src="svg/icon-favorite.svg")
+                    div.cat-text-field
+                      div.cat-name.cat-name__teal-bold My Favorite Offers
+                      div.cat-count.cat-count__teal-bold (2)
+                      
           
           div.seudo-block.col-xl-3(style="display: none; background-color: #efefef")
         
