--- a/css/main.nested.css
+++ b/css/main.nested.css
@@ -540,13 +540,25 @@ div.cat-wrapper {
     div.cat-wrapper a img {
       width: 50px;
       height: 50px;
-      display: table-cell;
       vertical-align: middle; }
     div.cat-wrapper a div.cat-text-field {
       display: table-cell;
       vertical-align: middle; }
       div.cat-wrapper a div.cat-text-field div {
         height: 20px; }
+
+div.cat-wrapper__favorite {
+  margin-top: 3vh;
+  padding-top: 3vh;
+  border-top: 1px solid #c8c8c8; }
+
+.cat-name__teal-bold {
+  font: 700 18px "Brandon Grotesque" !important;
+  color: #00999e !important; }
+
+.cat-count__teal-bold {
+  font: 700 14px "Brandon Grotesque" !important;
+  color: #00999e !important; }
 
 section.menu-mobile {
   width: 100%;
