--- a/css/main.sass
+++ b/css/main.sass
@@ -629,7 +629,6 @@ div.cat-wrapper
     img
       width: 50px
       height: 50px
-      display: table-cell
       vertical-align: middle
     div.cat-text-field
       display: table-cell
@@ -637,6 +636,17 @@ div.cat-wrapper
       div
         height: 20px
 
+div.cat-wrapper__favorite
+  margin-top: 3vh
+  padding-top: 3vh
+  border-top: 1px solid #c8c8c8
+
+.cat-name__teal-bold
+  font: 700 18px $BG !important
+  color: $teal !important
+.cat-count__teal-bold
+  font: 700 14px $BG !important
+  color: $teal !important
 
 
 // categories in mobile menu
