open sans 20px teal

--- a/05_register.jade
+++ b/05_register.jade
@@ -81,10 +81,10 @@ html
             div.user-login.col I AM A NEW USER
     
       
-    
+      div.teal__large-opensans Welcome! Start saving and enjoy your favorite offers.
     
       //either turn this off (I HAVE AN ACCOUNT)
-      //- div.box-register.top-buffer-sm
+      div.box-register.top-buffer-sm
         div.row
           div.col
             form.form-animated
