--- a/css/main.sass
+++ b/css/main.sass
@@ -194,6 +194,9 @@ a:hover, a:visited, a:active, a:focus
 .teal-1
   color: $teal !important
   font: 700 16px $BG
+.teal__large-opensans
+  font: 800 20px $OS
+  color: $teal
 
 a.teal
 	color: $brightTeal !important
