Google Social Button

--- a/05_register.jade
+++ b/05_register.jade
@@ -195,9 +195,11 @@ html
               a.teal-1 Get Invitation Codes
               
             
-      //- div.row-socialLogin.row.top-buffer-sm              
-        div.facebook-login.col(style="background: pink") facebook button goes here
-        div.google-login.col(style="background: grey") google  button goes here
+      div.row-socialLogin.row.top-buffer-sm              
+        button.btn-action.btn-blue.btn-google.googleBtn 
+          i.btn-google__icon
+            img(src="svg/app-google.svg")
+          span.btn-google__title Sign up with Google
     
 
 
